--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Michael Knepprath",
   "license": "MIT",
   "dependencies": {
-    "cron": "^1.2.1",
+    "node-cron": "^1.1.3",
     "pg": "^6.1.5",
     "twitter": "^1.7.0"
   }
