--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Michael Knepprath",
   "license": "MIT",
   "dependencies": {
+    "node": "^8.3.0",
     "node-cron": "^1.1.3",
     "pg": "^6.1.5",
     "twitter": "^1.7.0"
