--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "node-cron": "^1.1.3",
     "pg": "^6.1.5",
     "twitter": "^1.7.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^12.0.1",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
