Update bout to run as an AWS Lambda function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
     "extends": "airbnb-base",
     "rules": {
         "comma-dangle": 0,
-        "semi": 0
+        "semi": 0,
+        "quotes": 0,
     }
 }
