--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "eslint": "^4.8.0",
     "node-cron": "^1.2.1",
-    "pg": "^6.1.5",
-    "twitter": "^1.7.1"
+    "pg": "^8.3.0",
+    "twitter-api-v2": "^1.12.0"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^12.0.1",
